Fix header when wrapping onto two lines
Add horizontal padding to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   margin: 0;
-  padding-top: 4.5rem;
+  padding-top: 6rem;
   font-family: "Nunito", Futura, "Avenir Next", Avenir, "Century Gothic",
     "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -100,6 +100,7 @@ footer {
   font-size: 0.75rem;
   opacity: 0.8;
   margin-bottom: 1rem;
+  padding: 0 min(3rem, 10vw);
 }
 
 #homeImg {
